feat: complete craft helper rewrite
feat: reintroduce armor hider
fix: some rendering issues
remove: visitor helper craft helper integration
fix: change some minor things in the option screen